--- a/styles/event-create.css
+++ b/styles/event-create.css
@@ -14,23 +14,10 @@
     width: 100%;
     position: relative;
     float: left;
-    padding-top: 10px;
+    /*padding-top: 10px;*/
 }
-.e-type fieldset{
-    display: block;
-    position: relative;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    padding-top: 10px;
-    border: 0;
-    width: 220px;
-}
-.e-type fieldset input {
-    /*display: block;*/
-    /*float: left;*/
-    margin: 5px;
-}
+
+
 .event-text-input {
     width: 500px;
     height: 200px;
@@ -40,6 +27,51 @@
     float: left;
     padding-top: 15px;
 }
-.e-participants  {
+.e-participants, .e-comments {
+
+    float: left;
+    position: relative;
     width: 500px;
+}
+.event-places-input {
+    text-align: right;
+    width: 50px;
+    margin-top: 15px;
+}
+
+.e-participants fieldset, .e-comments fieldset, .e-type fieldset{
+    color: #696969;
+    display: block;
+    position: relative;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    margin-top: 10px;
+    /*padding-top: 10px;*/
+    border: 0;
+    width: 500px;
+}
+.e-participants fieldset input,.e-comments fieldset input, .e-type fieldset input{
+    margin-top: 10px;
+}
+.e-participants legend, .e-comments legend , .e-type legend {
+    font-size: 18px;
+    color: #000000;
+}
+
+#event-create-form{
+
+    margin-bottom: 100px;
+    padding: 10px;
+    padding-left: 0;
+    width: 500px;
+    float: left;
+}
+#event-create-form input {
+    border: 0;
+    padding: 0;
+    background: transparent;
+    font-size: 22px;
+    color: #c22c11;
+    cursor: pointer;
 }
