--- a/styles/event.css
+++ b/styles/event.css
@@ -115,7 +115,7 @@
 
 #user-info {
     position: relative;
-    padding-top: 27px;
+    padding-top: 20px;
     padding-left: 0;
     padding-right: 0;
     float: left;
@@ -128,6 +128,7 @@
 }
 
 .user-activity {
+
     color: #a9a9a9;
     font-size: 16px;
 }
@@ -205,6 +206,7 @@
 
 }
 .user-events-show-more{
+    float: left;
     color: #c82c10;
     margin-bottom: 5px;
     border: 0 !important  ;
