--- a/styles/main.css
+++ b/styles/main.css
@@ -151,7 +151,7 @@ body {
 .content-page {
     position: relative;
     width: 740px;
-    min-height: 600px;
+    /*min-height: 400px;*/
     /*border: 1px solid black;*/
     margin-top: 20px;
 }
@@ -172,7 +172,9 @@ body {
 
 .search-input {
     position: relative;
+    float: left;
     right: 50px;
+    margin-bottom: 20px;
     margin-left: 15px;
     padding-left: 12px;
     /*padding-top: px;*/
