--- a/styles/main.css
+++ b/styles/main.css
@@ -155,6 +155,9 @@ body {
     /*border: 1px solid black;*/
     margin-top: 20px;
 }
+.full-wide {
+    width: 100% !important;
+}
 .content-page td{
     /*border: 1px solid black;*/
 }
@@ -437,4 +440,70 @@ body {
 }
 .special-offers {
     background-color: #258a3b;
+}
+.main-content-block-image img{
+    border: 5px solid #ffffff;
+}
+.main-content-block {
+
+    position: relative;
+    float: left;
+    width: 300px;
+    padding: 0;
+    margin-right: 47px;
+    margin-bottom: 24px;
+}
+.last-in-row {
+    margin-right: 0 !important;
+}
+.main-content-block div {
+    position: relative;
+    float: left;
+}
+.main-content-block-header {
+    width: 295px;
+    height: 30px;
+    padding-top: 8px;
+    text-align: center;
+    text-transform: uppercase;
+    background-color: #de6556;
+    font-size: 20px;
+    border-top: 1px solid #8b0000;
+    color: #ffffff;
+}
+.main-content-block-header hr {
+    display: block;
+    position: absolute;
+    top: 0;
+    margin: 0;
+    background-color: #ffffff;
+    border: 0;
+    height: 1px;
+    width: 295px;
+
+}
+.main-content-block-footer {
+    width: 295px;
+    height: 30px;
+    padding-top: 10px;
+    text-align: center;
+    background-color: #fff1cc;
+    font-size: 20px;
+    color: #5d5c57;
+}
+
+.main-content-block-image img{
+    float: left;
+}
+.main-content-popular-tags a{
+    text-decoration: none;
+    color: #76af68;
+}
+.main-content-popular-tags {
+    margin-bottom: 25px;
+}
+
+.right  {
+    text-align: right;
+
 }
