styles fixed add jquery

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,18 +1,22 @@
 .last {
     border: 0 !important;
 }
+input[type=text],
+input[type=password],
+input[type=search],
+textarea {
+    outline: none;
+}
 
 body {
     font-family: Arial, sans-serif;
     letter-spacing: 0px;
     font-size: 11pt;
-
 }
 
 .usual {
     float: left;
     position: relative;
-
 }
 
 .header {
@@ -23,17 +27,14 @@ body {
 
 .page-header {
     position: relative;
-    /*background-color: #8aad9c;*/
     height: 43px;
     width: 995px;
     margin: 0 auto;
-    /*border: 1px solid black;*/
 }
 
 .menu-active {
     background: url("../images/menu-selector.png") no-repeat center bottom;
     height: 35px !important;
-    /*background-color: red;*/
 }
 
 .menu-active a {
@@ -43,9 +44,7 @@ body {
 .page-header div {
     position: relative;
     float: left;
-    /*bottom: 0;*/
     height: 100%;
-    /*margin: 10px;*/
 }
 
 .page {
@@ -54,17 +53,11 @@ body {
 }
 
 .nav {
-    /*background-color: #ad4eab;*/
-    /*position: relative;*/
     color: #ffffff;
     text-decoration: none;
     text-align: center;
     left: 150px; /* logo.png*/
     font-size: 22px;
-    /*margin-left: 100px;*/
-    /*padding-top: 50px;*/
-    /*background-color: #ff00ff;*/
-
 }
 
 .nav div {
@@ -95,9 +88,6 @@ body {
 }
 
 .logo {
-    /*display: block;*/
-    /*position: absolute;*/
-    /*bottom: 10px;*/
     height: 37px !important;
     padding-top: 5px;
     margin-left: 15px;
@@ -133,9 +123,6 @@ body {
     width: 995px;
     margin: 0 auto;
     background-color: #ededed;
-    /*min-height: 700px;*/
-    /*border: 1px solid black;*/
-
 }
 
 .content-header {
@@ -145,16 +132,14 @@ body {
     margin: 0 auto;
 }
 
-
 .content-header div {
-    width: 170px;
+    min-width: 170px;
     text-align: center;
     position: relative;
     float: left;
     font-size: 18pt;
     padding: 10px;
     border-right: 1px solid #ffffff;
-
 }
 
 .content-header a {
@@ -187,19 +172,15 @@ body {
     cursor: pointer;
 }
 .content-header-event img {
-    /*position: relative;*/
     display: block;
     float: right;
     padding-top: 3px;
     padding-left: 3px;
-
 }
 
 .content-page {
     width: 740px;
     height: 100%;
-    /*min-height: 400px;*/
-    /*border: 1px solid black;*/
     margin-top: 20px;
 }
 
@@ -208,7 +189,6 @@ body {
 }
 
 .content-right-sidebar {
-    /*border: 1px solid black;*/
     width: 260px;
     min-height: 600px;
     position: absolute;
@@ -226,15 +206,12 @@ body {
     margin-bottom: 20px;
     margin-left: 15px;
     padding-left: 12px;
-    /*padding-top: px;*/
     width: 205px;
     height: 26px;
-    /*padding-top: 1px;*/
     background-image: url("../images/serch-wrapp.png");
     background-repeat: no-repeat;
     text-align: left;
     right: 0;
-
 }
 
 *+html .search-input {
@@ -262,7 +239,6 @@ body {
     width: 170px;
     font-size: 14px;
     background: transparent;
-
 }
 
 .search-submit {
@@ -275,8 +251,6 @@ body {
     background: transparent url("../images/search-glass.png") no-repeat right top;
     text-indent: -1000em;
     cursor: pointer;
-    cursor: hand;
-
 }
 
 .filter {
@@ -286,18 +260,10 @@ body {
     color: #505050;
     text-align: left;
     font-size: 11pt;
-
 }
 
 .filter-caption {
     position: relative;
-    /*margin-left: -10px;*/
-}
-
-.filter div {
-
-    /*margin-left: 5px;*/
-
 }
 
 .filter-date,
@@ -317,7 +283,6 @@ body {
 
 .filter-loaded-tags {
     margin-left: 50px;
-    /*text-align: justify;*/
     width: 180px;
 }
 
@@ -335,7 +300,6 @@ body {
     margin-right: 15px;
     float: left;
     left: 0;
-
 }
 
 .content-footer {
@@ -354,7 +318,6 @@ body {
     border: 1px solid #b4b4b4;
     background-color: #ffffff;
     cursor: pointer;
-    cursor: hand;
 }
 
 .footer {
@@ -395,7 +358,6 @@ body {
 .footer-menu span {
     text-shadow: #000000 1px -1px 1px;
     text-transform: uppercase;
-
 }
 
 .event-tab {
@@ -409,19 +371,15 @@ body {
     margin: 1px;
     margin-right: 5px;
     margin-bottom: 5px;
-
 }
 
 .event-tab div {
     position: relative;
-
 }
 
 .event-tab img {
     display: block;
     margin: 0 auto;
-    /*margin: 14px;*/
-    /*background-color: #b2b2b2;*/
 }
 
 .img-event-date {
@@ -430,10 +388,9 @@ body {
     width: 215px;
     color: #ffffff;
     text-shadow: #000000 2px -1px 1px;
-    /*background: rgb(0, 0, 0); *//* на случай, если следующая строка не сработает */
+    background: rgb(0, 0, 0);  /*на случай, если следующая строка не сработает*/
     background: rgba(0, 0, 0, 0.5);
     text-align: center;
-
 }
 
 .event-caption {
@@ -442,7 +399,6 @@ body {
     padding-left: 14px;
     padding-bottom: 12px;
     color: #505050;
-
 }
 
 .event-label {
@@ -454,7 +410,6 @@ body {
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 14px;
-
 }
 
 .event-location {
@@ -466,14 +421,12 @@ body {
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 14px;
-
 }
 
 .event-location img {
     float: left;
     margin: 0;
     margin-right: 10px;
-    /*margin-top: -2px;*/
 }
 
 .event-tags {
@@ -485,7 +438,6 @@ body {
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 14px;
-
 }
 
 .event-tags img {
@@ -504,7 +456,6 @@ body {
     padding-top: 6px;
     padding-bottom: 6px;
     text-align: center;
-    /*height: 100%;*/
 }
 
 .entertainment {
@@ -534,8 +485,6 @@ body {
 
 .last-in-row {
     margin-right: 0 !important;
-    /*right: 0;*/
-    /*position: absolute;*/
 }
 
 .main-content-block div {
@@ -564,7 +513,6 @@ body {
     border: 0;
     height: 1px;
     width: 295px;
-
 }
 
 .main-content-block-footer {
@@ -592,7 +540,6 @@ body {
 
 .right {
     text-align: right;
-
 }
 
 .form-input {
@@ -602,12 +549,9 @@ body {
     float: left;
     padding: 0;
     margin: 0;
-
-
 }
 
 .activity-search {
-    /*position: absolute !important;*/
     left: 45px !important;
 }
 
@@ -621,6 +565,7 @@ body {
     background-color: #ededed;
     border-bottom: 1px solid #ffffff;
 }
+
 .activity-period-first {
     padding-top: 3px;
 }
@@ -637,7 +582,6 @@ body {
     position: relative;
     float: left;
     top: -20px;
-
 }
 
 .wide {
@@ -681,7 +625,6 @@ body {
     -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 1);
     -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 1);
     box-shadow: 0 0 3px rgba(0, 0, 0, 1);
-
 }
 
 .activity-event-notification {
@@ -689,7 +632,6 @@ body {
     color: #656565;
     padding-top: 10px;
     padding-left: 20px;
-    /*width: 100%;*/
     width: 660px;
 }
 
@@ -697,7 +639,6 @@ body {
     color: #656565;
     padding-left: 20px;
     width: 600px;
-
 }
 
 .activity-event-changes {
@@ -712,7 +653,6 @@ body {
 
 .activity-event-notification a {
     text-decoration: none;
-
 }
 
 .activity-event-link {
@@ -735,13 +675,11 @@ body {
 .big-digit {
     color: #565656;
     font-size: 22px;
-
 }
 
 .small-text {
     font-size: 12px;
     color: #565656;
-
 }
 
 #user-info-left {
@@ -756,13 +694,11 @@ body {
 #user-bar-left img {
     padding-top: 8px;
     float: left;
-
 }
 
 #user-bar-left {
     float: left;
     width: 230px;
-    /*height: 100px;*/
     top: 0;
     margin: 0;
 }
@@ -770,11 +706,9 @@ body {
 .filter-draft {
     position: relative;
     float: left;
-    /*width: 225px;*/
     padding-top: 15px;
     padding-left: 0;
     margin: 0;
-    /*height: 200px;*/
 }
 
 .filter-draft  div {
@@ -795,7 +729,6 @@ body {
 }
 
 .filter-draft div input {
-    /*margin: 0;*/
     margin-right: 20px;
     margin-top: 5px;
     margin-left: 0;
@@ -813,15 +746,13 @@ body {
 }
 
 .events-draft {
-
     position: relative;
     float: left;
-    width: 730px;
+    width: 570px;
 }
 
 .left {
     margin: 0 0 10px !important;
-
 }
 
 .wide {
@@ -843,13 +774,11 @@ body {
     margin-top: 2px !important;
     padding: 0 !important;
     padding-left: 5px !important;
-
 }
 
 .draft-event-text {
     color: #777777;
     font-size: 10px !important;
-
 }
 
 .draft-event-time {
@@ -865,15 +794,11 @@ body {
     font-size: 22px;
     float: left;
     color: #c82c10;
-    /*margin-top: 5px;*/
     border-radius: 3px;
     margin-bottom: 5px;
     border: 0 !important;
-    /*border: 1px solid #c7c7c7 !important;*/
     cursor: pointer;
-    cursor: hand;
     text-align: center;
-
 }
 
 .event-caption-input {
@@ -895,7 +820,6 @@ body {
     width: 100%;
     position: relative;
     float: left;
-    /*padding-top: 10px;*/
 }
 
 .event-text-input {
@@ -910,7 +834,6 @@ body {
 }
 
 .e-participants, .e-comments {
-
     float: left;
     position: relative;
     width: 500px;
@@ -930,7 +853,6 @@ body {
     margin: 0;
     padding: 0;
     margin-top: 10px;
-    /*padding-top: 10px;*/
     border: 0;
     width: 500px;
 }
@@ -945,7 +867,6 @@ body {
 }
 
 #event-create-form {
-
     margin-bottom: 100px;
     padding: 10px;
     padding-left: 0;
@@ -984,7 +905,6 @@ body {
     margin-top: 0 !important;
     padding-top: 2px !important;
     position: relative;
-    /*padding-left: 20px;*/
 }
 
 .event-more-b2 img {
@@ -1004,14 +924,12 @@ body {
     float: left;
     padding-top: 15px;
     color: #5c5c5c;
-    /*width: 100%;*/
 }
 
 #e-caption {
     position: relative;
     font-size: 24px;
     margin-bottom: 10px;
-
 }
 
 .event-edit-button a {
@@ -1033,7 +951,6 @@ body {
 
 #content-all-comments {
     float: left;
-
 }
 
 #content-comments-list {
@@ -1042,7 +959,6 @@ body {
 
 #content-all-comments ol {
     list-style: none;
-
 }
 
 #content-all-comments div {
@@ -1053,7 +969,6 @@ body {
 #content-all-comments .content-comments-datetime {
     font-size: 10px;
     color: #a9a9a9;
-
 }
 
 #content-all-comments span {
@@ -1079,7 +994,6 @@ body {
 #content-all-comments .content-comments-header a {
     text-decoration: none;
     color: #808080;
-
 }
 
 #user-bar {
@@ -1100,7 +1014,6 @@ body {
 
 #user-info div {
     position: relative;
-    /*float: left;*/
     text-align: center;
     width: 100%;
 }
@@ -1112,7 +1025,6 @@ body {
     padding-right: 0;
     float: left;
     margin: 0 auto;
-
 }
 
 .user-name {
@@ -1121,7 +1033,6 @@ body {
 }
 
 .user-activity {
-
     color: #a9a9a9;
     font-size: 16px;
 }
@@ -1135,8 +1046,7 @@ body {
     position: relative;
     float: left;
     right: 0;
-    width: 260px;
-    /*height: 50px;*/
+    width: 260px ;
     text-align: center;
     margin-bottom: 5px;
     margin-top: 15px;
@@ -1147,17 +1057,11 @@ body {
     float: left;
     width: 260px;
     padding: 0;
-
-    /*padding: 5px;*/
     height: 52px;
-    /*padding-top: 0px;*/
     background-color: #dedddd;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid #d1d0d0;
     cursor: pointer;
-    cursor: hand;
-
-    /*padding-left: 10px;*/
 }
 
 #user-events div div, #user-all-events div div {
@@ -1165,25 +1069,19 @@ body {
     margin: 0;
     padding: 0;
     font-size: 16px;
-    /*height: 15px;*/
     border: 0;
     height: 20px;
     position: relative;
     background: none;
     width: 210px;
-    /*background-color: red;*/
-    /*margin:0;*/
     margin-top: 4px;
-
 }
 
 #user-events div img, #user-all-events div img {
-    /*display: block;*/
     position: relative;
     float: left;
     margin-left: 5px;
     margin-top: 5px;
-
 }
 
 .user-events-caption, .user-events-show-more {
@@ -1212,7 +1110,6 @@ body {
     margin-bottom: 5px;
     border: 0 !important;
     cursor: pointer;
-    cursor: hand;
     text-align: center;
 }
 
@@ -1224,7 +1121,6 @@ body {
 .user-event-time {
     font-size: 12px !important;
     color: #797979;
-
 }
 
 .float-red-select {
@@ -1232,7 +1128,6 @@ body {
     border: 0;
     background: transparent;
     width: auto;
-
 }
 
 .event-owner-selects-wrapper {
@@ -1262,16 +1157,12 @@ body {
     font-size: 12px;
     float: left;
     color: #c82c10;
-    /*margin-top: 2px;*/
     margin-left: 5px;
     border-radius: 1px;
     margin-bottom: 5px;
     border: 0 !important;
-    /*border: 1px solid #c7c7c7 !important;*/
     cursor: pointer;
-    cursor: hand;
     text-align: center;
-    /*margin-right: 100%;*/
 }
 
 .profile-main-data {
@@ -1358,6 +1249,16 @@ body {
     margin-right: 25px;
 }
 
+*+html  .quest-form-contact-list {
+    border: 1px solid #808080;
+}
+
+@media \0screen {
+    .quest-form-contact-list {
+        border: 1px solid #808080;
+    }
+}
+
 .quest-form-filter-top {
     font-size: 10pt;
 }
@@ -1385,7 +1286,6 @@ body {
 }
 
 .quest-form-list-item {
-    /*padding-left: 5px;*/
     width: 100%;
     height: 47px;
     padding-top: 5px;
@@ -1425,7 +1325,6 @@ body {
     margin-top: 15px;
     right: 10px;
     cursor: pointer;
-    cursor: hand;
 }
 
 .quest-form-contact-list {
@@ -1433,10 +1332,11 @@ body {
     overflow: auto;
     margin-bottom: 5px;
     margin-top: 10px;
+    width: 360px;
 }
 
 .quest-form-invite-list {
-    height: 670px;
+    height: 667px;
     overflow: auto;
     margin-bottom: 5px;
     margin-top: 10px;
@@ -1445,7 +1345,6 @@ body {
 
 .quest-form-invite-text {
     width: 360px;
-    /*padding-left: 20px;*/
 }
 
 .quest-form-invite-text textarea {
@@ -1468,6 +1367,7 @@ body {
     cursor: pointer;
     color: #ffffff;
 }
+
 .quest-form-change span {
     right: 20px;
 }
@@ -1496,7 +1396,6 @@ body {
     padding-top: 5px;
     margin-right: 150px;
     color: #a99b4d;
-
 }
 
 .main-eventplus-button {
@@ -1522,7 +1421,6 @@ body {
     border: 1px solid #494949;
     margin-left: 4px;
     cursor: pointer;
-
 }
 
 .form-input-add-button:hover {
@@ -1534,12 +1432,11 @@ body {
 
 .quest-form-invited {
     width: 570px;
-    height: 600px;
+    height: 690px;
 }
 
 .form-user-already-button {
     color: #a51101;
-
 }
 
 .form-user-invite-button:hover {
