finish jquery for from-quests.html added to js/from-quest.js

--- a/styles/main.css
+++ b/styles/main.css
@@ -1444,7 +1444,10 @@ body {
     cursor: pointer;
 }
 
+
 .form-user-invite-block {
+    position: absolute;
+    right:10px;
     font-size: 9pt;
     text-align: right;
     width: 170px;
