--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,10 @@ textarea {
     outline: none;
 }
 
+img {
+    border: none;
+}
+
 body {
     font-family: Arial, sans-serif;
     letter-spacing: 0px;
@@ -140,6 +144,7 @@ body {
     font-size: 18pt;
     padding: 10px;
     border-right: 1px solid #ffffff;
+    height: 23px;
 }
 
 .content-header a {
@@ -180,9 +185,10 @@ body {
 }
 
 .content-page {
-    width: 740px;
+    width: 740px ;
     height: 100%;
     margin-top: 20px;
+    min-height: 300px;
 }
 
 .full-wide {
@@ -274,6 +280,9 @@ body {
 .filter-loaded-tags {
     margin-left: 10px;
     margin-top: 15px;
+}
+.filter-date {
+    cursor: pointer;
 }
 
 .filter-location a,
@@ -699,7 +708,7 @@ body {
 
 #user-bar-left {
     float: left;
-    width: 230px;
+    width: 220px;
     top: 0;
     margin: 0;
 }
@@ -800,6 +809,7 @@ body {
     border: 0 !important;
     cursor: pointer;
     text-align: center;
+    bottom: 0;
 }
 
 .event-caption-input {
@@ -1458,4 +1468,21 @@ body {
     width: 170px;
     padding-top: 15px !important;
     font-style: italic;
+}
+
+.margin0 {
+    margin: 0 !important;
+}
+
+#datepicker {
+    background: transparent;
+    border: 0;
+
+}
+#now,
+#datepicker,
+#storedtime,
+.event-start-time,
+.event-end-time  {
+  display: none;
 }
